--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,15 @@
+/*colors
+ff6b35 f7c59f eeebd3 f7c548 3b7080 3a7f57
+pumpkin peach eggshell yellow blue  green
+*/
+
 body {
   margin: 50px;
   margin-bottom: 60px;
-  background-color: #CDCDCD;
-  background: -webkit-linear-gradient(to right, #CDCDCD, #8F6593); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #CDCDCD, #8F6593); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #3B252C;
+  background-color: #EEEBD3;
+  background: -webkit-linear-gradient(to right, #EEEBD3, #f7c59f ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #EEEBD3, #f7c59f ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #3a7f57;
   font-family: 'Roboto', sans-serif;
 }
 
