--- a/css/custom.css
+++ b/css/custom.css
@@ -13,3 +13,9 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.monkeysay{
+    background-color: #FF6B35;
+    color: #EEEBD3;
+    margin: 20px;
+}
+
