--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,7 @@ body {
   background: linear-gradient(to right, #EEEBD3, #f7c59f ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #3a7f57;
   font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
 }
 
 .monkeysay{
@@ -19,4 +20,25 @@ body {
     margin: 20px;
     padding: 20px;
 }
+
+/* the countdown thermometer thing */
+
+.progress {
+  width: 100%;
+  height: 50px;
+}
+.progress-wrap {
+  background: #f80;
+  margin: 20px 0;
+  overflow: hidden;
+  position: relative;
+}
+.progress-bar {
+    background: #ddd;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+
 
