minor style updates

--- a/css/custom.css
+++ b/css/custom.css
@@ -21,12 +21,12 @@ body {
     padding: 20px;
 }
 
-.help-block{
+/*.help-block{
   font-size: .8em;
   line-height: 95%;
   margin: 6px;
   padding: 6px;
-}
+}*/
 
 /* the countdown thermometer thing */
 
