minor style updates

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,11 @@ body {
   margin: 6px;
   padding: 6px;
 }*/
+.progress-footer{
+    margin: 6px;
+  padding: 6px;
+    
+}
 
 /* the countdown thermometer thing */
 
