minor style change

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,8 +5,10 @@
 @import "minima";
 
 body {
+  /*
   margin: 50px;
   margin-bottom: 60px;
+    */
   background-color: #EEEBD3;
   background: -webkit-linear-gradient(to right, #EEEBD3, #f7c59f ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #EEEBD3, #f7c59f ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -40,6 +42,6 @@ a:visited{
     margin-bottom: 0;
     float: left;
 }
-.site-title:visited{
+.site-title, .site-title:visited{
     color: #3a7f57;
 }
