--- a/_includes/home.html
+++ b/_includes/home.html
@@ -17,7 +17,9 @@ layout: default
         <h2>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
-          <p class="post-content">{{post.content | truncate: 160 | escape }} </p>
+            
+            {% assign content = post.content %}
+            {% include post-preview.html %}
       </li>
     {% endfor %}
   </ul>
@@ -25,3 +27,5 @@ layout: default
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
 
 </div>
+
+
