--- a/_includes/home.html
+++ b/_includes/home.html
@@ -19,7 +19,7 @@ layout: default
         </h2>
             
             {% assign content = post.content %}
-            {% include post-preview.html %}
+          <div>{% include post-preview.html %}</div>
       </li>
     {% endfor %}
   </ul>
