--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,8 @@ layout: default
         <h2>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
-            {{ post.excerpt | strip_html | truncatewords:18 }}
+            {% assign content = post.content %}
+          {% include post-preview.html %}
       </li>
     {% endfor %}
   </ul>
