--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts LOG</h1>
+  <h1 class="page-heading">Woot - 30% of 100 Days of Code Complete</h1>
     
 <div style = "width: 100%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
-  <div style = "width: 2%; height: 8px; background-color: #3a7f57;">
+  <div style = "width: 30%; height: 8px; background-color: #3a7f57;">
   </div>
 </div>
 
