--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,8 @@ layout: default
     {{ content }}
   </div>
 
+{% include twitter_end.html %}
+
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
