--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,12 @@ layout: default
 
   <h1 class="page-heading">Posts - 100 Days of Code Blog</h1>
 
-    <h2>30 of 100 Days of Code Complete</h2>
+    <h5>30 of 100 Days of Code Complete</h5>
 <div style = "width: 100%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
   <div style = "width: 30%; height: 8px; background-color: #3a7f57;">
   </div>
 </div>
-    <h2>27 of 30 Days of Code on [Hacker Rank](https://hackerrank.com) Complete</h2>
+    <h5>27 of 30 Days of Code on Hacker Rank Complete</h5>
 <div style = "width: 30%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
   <div style = "width: 27%; height: 8px; background-color: #3a7f57;">
   </div>
