--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,14 +10,12 @@ layout: default
 <div style = "width: 100%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
   <div style = "width: 30%; height: 8px; background-color: #3a7f57;">
   </div>
-    <h5>30 of 100 Days of Code Complete</h5>
-</div>
+</div>    <h5>30 of 100 Days of Code Complete</h5>
     
 <div style = "width: 30%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
   <div style = "width: 27%; height: 8px; background-color: #3a7f57;">
-  </div>
-    <h5>27 of 30 Days of Code on Hacker Rank Complete</h5>
-</div>
+  </div>   
+</div><h5>27 of 30 Days of Code on Hacker Rank Complete</h5>
 
 
   
