--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,21 +4,23 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts - 100 Days of Code Blog</h1>
+  <h1 class="page-heading">100 Days of Code Progress</h1>
 
     
 <div style = "width: 100%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
-  <div style = "width: 30%; height: 8px; background-color: #3a7f57;">
+  <div style = "width: 31%; height: 8px; background-color: #3a7f57;">
   </div>
-</div>    <h5>30 of 100 Days of Code Complete</h5>
+</div>    <h5>31 of 100 Days of Code Complete</h5>
     
 <div style = "width: 30%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
-  <div style = "width: 27%; height: 8px; background-color: #3a7f57;">
+  <div style = "width: 28%; height: 8px; background-color: #3a7f57;">
   </div>   
-</div><h5>27 of 30 Days of Code on Hacker Rank Complete</h5>
+</div><h5>28 of 30 Days of Code on Hacker Rank Complete</h5>
 
+    {% include hackerrank.html %}
 
-  
+  <h2 class="page-heading">Posts - 100 Days of Code Blog</h2>
+    
   {{ content }}
 
   <ul class="post-list">
