--- a/assets/main.scss
+++ b/assets/main.scss
@@ -50,3 +50,16 @@ a:visited{
 .site-title, .site-title:visited{
     color: #3a7f57;
 }
+
+.chart{
+    transform: rotateX(180deg);
+}
+.rbaxis{
+    align-content: left;
+    width: 100px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.hrgraphtext{
+    font-size: .8em; 
+}
