--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <meta name="twitter:site" content="@jessachandler" />
     <meta name="twitter:title" content="100DaysofCode for monkeywithacupcake" />
     <meta name="twitter:description" content="follow along" />
-    <meta name="twitter:image" content="/images/MonkeyWithCupcake.png">
+    <meta name="twitter:image" content="https://monkeywithacupcake.github.io/images/MonkeyWithCupcake.png">
     <!-- end of twitter summary card -->
     
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
