minor updates to hr graph

--- a/_includes/hackerrank.html
+++ b/_includes/hackerrank.html
@@ -1,4 +1,4 @@
-<div class = "hrgraphtext"> Current Hacker Rank: 29,106 </div>
+<div class = "hrgraphtext"> Current Hacker Rank (2017-08-02): 29,106 </div>
 <div class="wrapper">   
 <svg width="100" height="50.8575" class="chart">
   <polyline
@@ -53,4 +53,4 @@
              "/>
 </svg>  
 </div>
-<div class = "hrgraphtext"> Starting Hacker Rank: 508,575 </div>
+<div class = "hrgraphtext"> Starting Hacker Rank (2017-07-05): 508,575 </div>
