--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,12 +10,12 @@ layout: default
 <div style = "width: 100%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
   <div style = "width: 32%; height: 8px; background-color: #3a7f57;">
   </div>
-</div>    <h5>32 of 100 Days of Code Complete</h5>
+</div>    <h5>33 of 100 Days of Code Complete</h5>
     
-<div style = "width: 30%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
-  <div style = "width: 100%; height: 8px; background-color: #3a7f57;">
+<div style = "width: 50%; height: 8px; border: 2px; border-style: solid; border-color: #3a7f57;">
+  <div style = "width: 0%; height: 8px; background-color: #3a7f57;">
   </div>   
-</div><h5>TODAY! 30 Days of Code on Hacker Rank Complete</h5>
+</div><h5>Signed Up Today! 0 of 50 Daily CSS Image Challenge </h5>
 
     {% include hackerrank.html %}
 
@@ -26,14 +26,19 @@ layout: default
     {% for post in site.posts %}
       <li>
         {% assign date_format = site.minima.date_format | default: "%Y-%m-%d" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
+        
+        <span class="post-meta">{{ post.date | date: date_format }} {% capture words %}
+          {{ post.content | number_of_words | minus: 250 }}
+        {% endcapture %}
+        {% unless words contains "-" %}
+          {{ words | plus: 250 | divided_by: 180 | append: " minute read" }}
+        {% endunless %}
+          </span>
+          
         <h2>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
+        </h2> 
           {{ post.excerpt | strip_html | truncatewords:30 }}
-            <!--{% assign content = post.content %}
-          {% include post-preview.html %}-->
       </li>
     {% endfor %}
   </ul>
