--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,8 @@ layout: default
       <li>
         {% assign date_format = site.minima.date_format | default: "%Y-%m-%d" %}
         
-        <span class="post-meta">{{ post.date | date: date_format }} {% capture words %}
+        <span class="post-meta">{{ post.date | date: date_format }}
+            {% capture words %}
           {{ post.content | number_of_words | minus: 250 }}
         {% endcapture %}
         {% unless words contains "-" %}
