--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,7 +16,7 @@ body {
 }
 
 pre, code, .highlight, .highlighter-rouge .highlight {
-    font-size: .8em; 
+    font-size: 1em; 
     border: 1px solid #e8e8e8; 
     border-radius: 3px; 
     background-color: #EEEBD3; 
