--- a/_includes/twittercard.html
+++ b/_includes/twittercard.html
@@ -2,7 +2,7 @@
   
 
   <!-- Set a summary card size to large, or default to regular  -->
-  {% if page.cardsize == large %}
+  {% if page.cardsize == "large" %}
     <meta name="twitter:card" content="summary_large_image">
   {% else %}
     <meta name="twitter:card" content="summary">
